testdata/baselines/reference/submodule/conformance/stringLiteralsWithSwitchStatements04.errors.txt
stringLiteralsWithSwitchStatements04.ts(11,10): error TS2678: Type '"baz"' is not comparable to type '"bar" | "foo"'.
stringLiteralsWithSwitchStatements04.ts(15,10): error TS2872: This kind of expression is always truthy.
stringLiteralsWithSwitchStatements04.ts(17,10): error TS2872: This kind of expression is always truthy.
stringLiteralsWithSwitchStatements04.ts(17,20): error TS2872: This kind of expression is always truthy.
stringLiteralsWithSwitchStatements04.ts(19,10): error TS2872: This kind of expression is always truthy.
stringLiteralsWithSwitchStatements04.ts(19,20): error TS2872: This kind of expression is always truthy.


==== stringLiteralsWithSwitchStatements04.ts (6 errors) ====
    let x: "foo";
    let y: "foo" | "bar"; 
    
    declare function randBool(): boolean;
    
    switch (y) {
        case "foo", x:
            break;
        case x, "foo":
            break;
        case x, "baz":
             ~~~~~~~~
!!! error TS2678: Type '"baz"' is not comparable to type '"bar" | "foo"'.
            break;
        case "baz", x:
            break;
        case "baz" && "bar":
             ~~~~~
!!! error TS2872: This kind of expression is always truthy.
            break;
        case "baz" && ("foo" || "bar"):
             ~~~~~
!!! error TS2872: This kind of expression is always truthy.
                       ~~~~~
!!! error TS2872: This kind of expression is always truthy.
            break;
        case "bar" && ("baz" || "bar"):
             ~~~~~
!!! error TS2872: This kind of expression is always truthy.
                       ~~~~~
!!! error TS2872: This kind of expression is always truthy.
            break;
    }
    